--- a/main/Course-Registration-System/Course-Registration-System.vcxproj
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj
@@ -138,10 +138,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Console.cpp" />
     <ClCompile Include="Login_System.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Console.h" />
     <ClInclude Include="Login_System.h" />
   </ItemGroup>
   <ItemGroup>
