--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,22 @@ main/.vs/main/v16/Browse.VC.db-shm
 main/.vs/main/v16/Browse.VC.db-wal
 main/.vs/main/v16/Browse.VC.opendb
 main/.vs/main/v16/ipch/AutoPCH/b06b474e82865fe1/CONSOLE.ipch
+main/.vs/main/v16/ipch/AutoPCH/3c2937baeb28ad63/LOGIN_SYSTEM.ipch
+main/.vs/main/v16/ipch/AutoPCH/909ec08504fd18f/SOURCE.ipch
+main/.vs/main/v16/ipch/AutoPCH/ae7b270a4514cc85/CONSOLE.ipch
+main/Course-Registration-System/x64/Debug/Console.obj
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/CL.command.1.tlog
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/CL.read.1.tlog
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/CL.write.1.tlog
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/Course-Registration-System.lastbuildstate
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/link.command.1.tlog
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/link.read.1.tlog
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/link.write.1.tlog
+main/Course-Registration-System/x64/Debug/Course-Registration-System.log
+main/Course-Registration-System/x64/Debug/Login_System.obj
+main/Course-Registration-System/x64/Debug/Source.obj
+main/Course-Registration-System/x64/Debug/vc142.idb
+main/Course-Registration-System/x64/Debug/vc142.pdb
+main/x64/Debug/Course-Registration-System.exe
+main/x64/Debug/Course-Registration-System.ilk
+main/x64/Debug/Course-Registration-System.pdb
