--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ main/x64/Debug/Course-Registration-System.pdb
 main/Course-Registration-System/x64/Debug/Tokenizer.obj
 main/.vs/main/v16/ipch/AutoPCH/f489a177fc0ad91e/TOKENIZER.ipch
 main/.vs/main/v16/ipch/AutoPCH/62aa72fd54fef41d/TOKENIZER.ipch
+main/.vs/main/v16/ipch/AutoPCH/2281a517bf650776/SCHOOL.ipch
+main/.vs/main/v16/ipch/AutoPCH/2282d813cc2229f3/TIME.ipch
+main/.vs/main/v16/ipch/AutoPCH/ef2f07bf32fc0891/TOKENIZER.ipch
+main/.vs/main/v16/ipch/AutoPCH/f38a7dbed66a7fdf/SOURCE.ipch
+main/Course-Registration-System/input1.csv
+main/Course-Registration-System/list.csv.xlsx
+main/Course-Registration-System/~$list.csv.xlsx
+main/.vs/main/v16/ipch/AutoPCH/f38a7dbed66a7fdf/SOURCE.ipch
