--- a/main/Course-Registration-System/Course-Registration-System.vcxproj
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Console.cpp" />
+    <ClCompile Include="display.cpp" />
     <ClCompile Include="file.cpp" />
     <ClCompile Include="Login_System.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -148,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console.h" />
+    <ClInclude Include="display.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="Login_System.h" />
     <ClInclude Include="school.h" />
@@ -155,7 +157,7 @@
     <ClInclude Include="Tokenizer.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Nguyen Van A.txt" />
+    <None Include="allStudent.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
