Add files to .sln
Add
+ staffs.txt
+ students.txt

--- a/main/Course-Registration-System/Course-Registration-System.vcxproj.filters
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj.filters
@@ -72,5 +72,11 @@
     <Text Include="Text.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="db\students.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="db\staffs.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
