--- a/main/Course-Registration-System/Course-Registration-System.vcxproj
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj
@@ -160,6 +160,8 @@
     <None Include="allStudent.csv" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="db\staffs.txt" />
+    <Text Include="db\students.txt" />
     <Text Include="Text.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
