--- a/main/Course-Registration-System/Course-Registration-System.vcxproj
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj
@@ -159,6 +159,9 @@
   <ItemGroup>
     <None Include="allStudent.csv" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
