--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ main/Course-Registration-System/input1.csv
 main/Course-Registration-System/list.csv.xlsx
 main/Course-Registration-System/~$list.csv.xlsx
 main/.vs/main/v16/ipch/AutoPCH/f38a7dbed66a7fdf/SOURCE.ipch
+main/.vs/main/v16/ipch/AutoPCH/f0009d159bbfe14f/SOURCE.ipch
