--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ main/Course-Registration-System/list.csv.xlsx
 main/Course-Registration-System/~$list.csv.xlsx
 main/.vs/main/v16/ipch/AutoPCH/f38a7dbed66a7fdf/SOURCE.ipch
 main/.vs/main/v16/ipch/AutoPCH/f0009d159bbfe14f/SOURCE.ipch
+main/.vs/main/v16/ipch/AutoPCH/ccf57779e5317030/FILE.ipch
