--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,14 @@ main/Course-Registration-System/~$list.csv.xlsx
 main/.vs/main/v16/ipch/AutoPCH/f38a7dbed66a7fdf/SOURCE.ipch
 main/.vs/main/v16/ipch/AutoPCH/f0009d159bbfe14f/SOURCE.ipch
 main/.vs/main/v16/ipch/AutoPCH/ccf57779e5317030/FILE.ipch
+main/.vs/main/v16/ipch/AutoPCH/1890d9704511def1/CONSOLE.ipch
+main/.vs/main/v16/ipch/AutoPCH/229f093931859566/SCHOOL.ipch
+main/.vs/main/v16/ipch/AutoPCH/4a346f8dff5f12e1/TOKENIZER.ipch
+main/.vs/main/v16/ipch/AutoPCH/4af4f1aace289f63/TIME.ipch
+main/.vs/main/v16/ipch/AutoPCH/57b47334e19da06a/DISPLAY.ipch
+main/.vs/main/v16/ipch/AutoPCH/867a8edba5e0a745/LOGIN_SYSTEM.ipch
+main/Course-Registration-System/x64/Debug/Course-R.101DAF2D.tlog/unsuccessfulbuild
+main/Course-Registration-System/x64/Debug/Course-Registration-System.exe.recipe
+main/Course-Registration-System/x64/Debug/file.obj
+main/Course-Registration-System/x64/Debug/school.obj
+main/Course-Registration-System/x64/Debug/time.obj
