--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ main/Course-Registration-System/x64/Debug/Course-Registration-System.exe.recipe
 main/Course-Registration-System/x64/Debug/file.obj
 main/Course-Registration-System/x64/Debug/school.obj
 main/Course-Registration-System/x64/Debug/time.obj
+main/.vs/main/v16/ipch/AutoPCH/cc8d9fbc26073360/FILE.ipch
