--- a/main/Course-Registration-System/Course-Registration-System.vcxproj.filters
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj.filters
@@ -67,6 +67,9 @@
     <None Include="allStudent.csv">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="courses.csv">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="db\students.txt">
