--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ main/Course-Registration-System/x64/Debug/file.obj
 main/Course-Registration-System/x64/Debug/school.obj
 main/Course-Registration-System/x64/Debug/time.obj
 main/.vs/main/v16/ipch/AutoPCH/cc8d9fbc26073360/FILE.ipch
+main/.vs/main/v16/ipch/AutoPCH/b9f2058f67c57fe8/FILE.ipch
