--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ main/Course-Registration-System/x64/Debug/time.obj
 main/.vs/main/v16/ipch/AutoPCH/cc8d9fbc26073360/FILE.ipch
 main/.vs/main/v16/ipch/AutoPCH/b9f2058f67c57fe8/FILE.ipch
 main/.vs/main/v16/ipch/AutoPCH/538997bb3b849e9a/DISPLAY.ipch
+.vs/Course-Registration-System/v16/.suo
