--- a/main/Course-Registration-System/Course-Registration-System.vcxproj
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj
@@ -161,6 +161,9 @@
     <None Include="db\courses.csv" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="db\hk1.txt" />
+    <Text Include="db\hk2.txt" />
+    <Text Include="db\hk3.txt" />
     <Text Include="db\staffs.txt" />
     <Text Include="db\students.txt" />
   </ItemGroup>
