--- a/main/Course-Registration-System/Course-Registration-System.vcxproj.filters
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj.filters
@@ -87,5 +87,8 @@
     <Text Include="db\hk3.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="db\scoreboard.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
