--- a/main/Course-Registration-System/Course-Registration-System.vcxproj
+++ b/main/Course-Registration-System/Course-Registration-System.vcxproj
@@ -164,6 +164,7 @@
     <Text Include="db\hk1.txt" />
     <Text Include="db\hk2.txt" />
     <Text Include="db\hk3.txt" />
+    <Text Include="db\scoreboard.txt" />
     <Text Include="db\staffs.txt" />
     <Text Include="db\students.txt" />
   </ItemGroup>
